# cmake-install-problem

./: CMakeLists.txt  README.md
src/include/: gubbins.h
src/lib/: gubbins.cpp
